# lotic

./: Cargo.toml  Justfile
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: args.rs  command_processor.rs  main.rs
examples/basic-usage/: Cargo.toml
examples/basic-usage/src/: lib.rs
lotic-macros/: Cargo.toml
lotic-macros/src/: declare_program.rs  instruction.rs  instruction_accounts.rs  lib.rs
src/: lib.rs
tests/constraint-signer/: Cargo.toml
tests/constraint-signer/src/: lib.rs
tests/constraint-signer/tests/: constraint-signer.rs
