[package]
name = "lotic"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["cli", "examples/basic-usage", "lotic-macros"]

[workspace.dependencies]
pinocchio = "0.10.1"

[dependencies]
lotic-macros = { path = "lotic-macros" }
pinocchio = { workspace = true }

# [package.metadata.lotic]
# instructions = ["lotic-macros"]
