[package]
name = "lotic-macros"
version = "0.0.1"
edition = "2024"

[dependencies]
syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.44"
pinocchio = { workspace = true }
cargo_metadata = { version = "0.23.1" }
camino = { version = "1.2.2" }
serde_json = "1.0.149"
serde = "1.0.228"


[lib]
proc-macro = true
